2020-11-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Fixed typo in README.md

2020-11-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated comments

2020-11-21  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated accumulative_offsets_from_0x4E00 table generation code according to https://github.com/ocornut/imgui/issues/1859#issuecomment-395023812
	* Fixed typo in README.md

2020-07-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Changed file names / Changed descriptions in README

2020-06-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* imgui/GetGlyphRangesJapanese_standalone.cpp.template: Removed wrong comment

2020-06-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated comments

2020-05-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* initial commmit
	* Added ImGui GetGlyphRangesJapanese implementation
